CANDLEPIN-718: Cleanup